feat: Enhance SEO and data consistency for summaries
Improves search engine visibility by adding comprehensive meta tags to the homepage.
Ensures greater accuracy and reliability in trade finance document analysis by enforcing data consistency between extracted trade and compliance details.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DocuSummarizer AI</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>DocuSummarizer AI - Intelligent Document Analysis & Summarization Tool</title>
+    <meta name="title" content="DocuSummarizer AI - Intelligent Document Analysis & Summarization Tool">
+    <meta name="description" content="Free AI-powered tool to analyze and summarize documents instantly. Extract key details, verify trade compliance (LC, Export Contracts), and generate action items from PDFs and images using Gemini AI.">
+    <meta name="keywords" content="AI document summarizer, PDF analyzer, trade finance verification, letter of credit analysis, export contract checker, OCR, generative AI, Gemini API, automated document processing">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Shikander Sarker Mohit">
+    <meta name="language" content="English">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://docusummarizer.netlify.app/">
+    <meta property="og:title" content="DocuSummarizer AI - Analyze Documents in Seconds">
+    <meta property="og:description" content="Upload PDFs or Images to get instant structured summaries, action items, and trade compliance checks powered by AI.">
+    <meta property="og:image" content="https://docusummarizer.netlify.app/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://docusummarizer.netlify.app/">
+    <meta property="twitter:title" content="DocuSummarizer AI - Intelligent Document Analysis">
+    <meta property="twitter:description" content="Smart extraction of key details from trade documents and general files using AI.">
+    <meta property="twitter:image" content="https://docusummarizer.netlify.app/og-image.jpg">
+
+    <!-- JSON-LD Structured Data for Software Application -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "DocuSummarizer AI",
+      "headline": "Intelligent Document Summarization and Verification Tool",
+      "applicationCategory": "ProductivityApplication",
+      "operatingSystem": "Web Browser",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "description": "A web-based AI tool to analyze, summarize, and verify documents including Trade Finance instruments like LCs and Export Contracts.",
+      "featureList": "PDF Summarization, Image OCR, Trade Document Verification, Key Data Extraction",
+      "author": {
+          "@type": "Person",
+          "name": "Shikander Sarker Mohit"
+      }
+    }
+    </script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
